--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -28,11 +28,11 @@ msgstr "Artistas Reconocidos"
 
 msgctxt "#32001"
 msgid "Album cdARTs"
-msgstr "cdARTs para Álbumes"
+msgstr "cdARTs del Álbum"
 
 msgctxt "#32002"
 msgid "Select Artist"
-msgstr "Seleccionar Artista"
+msgstr "Seleccionar artista"
 
 msgctxt "#32003"
 msgid "Album Cover Arts"
@@ -44,19 +44,19 @@ msgstr "Descarga Automática"
 
 msgctxt "#32005"
 msgid "Save Local cdART List"
-msgstr "Guardar lista para cdART local"
+msgstr "Guardar lista local cdART"
 
 msgctxt "#32006"
 msgid "Artist Fanarts"
-msgstr "FanArt para Artistas"
+msgstr "FanArts para Artistas"
 
 msgctxt "#32007"
 msgid "Local Album Artists: %s"
-msgstr "Álbumes Artistas: %s"
+msgstr "Artistas locales para álbum: %s"
 
 msgctxt "#32008"
 msgid "Local cdARTs: %s"
-msgstr "cdARTs: %s"
+msgstr "cdARTs locales: %s"
 
 msgctxt "#32009"
 msgid "Artist ClearLOGOs"
@@ -64,7 +64,7 @@ msgstr "ClearLOGOs para Artistas"
 
 msgctxt "#32010"
 msgid "Local Discs: %s"
-msgstr "Álbumes: %s"
+msgstr "Discos locales: %s"
 
 msgctxt "#32011"
 msgid "Advanced"
@@ -72,19 +72,19 @@ msgstr "Avanzado"
 
 msgctxt "#32012"
 msgid "Refresh Addon Database"
-msgstr "Actualizar base de datos del addon"
+msgstr "Actualizar base de datos del Add-on"
 
 msgctxt "#32013"
 msgid "Clean XBMC's Music Library"
-msgstr "Limpiar biblioteca de música KODI"
+msgstr "Limpiar biblioteca de música de KODI"
 
 msgctxt "#32014"
 msgid "Update XBMC's Music Library"
-msgstr "Actualizar biblioteca de música KODI"
+msgstr "Actualizar biblioteca de música de KODI"
 
 msgctxt "#32015"
 msgid "Delete Addon's Database?"
-msgstr "¿Desea eliminar la base de datos local?"
+msgstr "¿Desea eliminar la base de datos para el Add-on?"
 
 msgctxt "#32016"
 msgid "Disc:"
@@ -96,7 +96,7 @@ msgstr "Carpeta para guardar lista cdART local"
 
 msgctxt "#32018"
 msgid "cdART  Backup folder"
-msgstr "Carpeta para copia de seguridad"
+msgstr "Carpeta para copia de seguridad cdART"
 
 msgctxt "#32019"
 msgid "Backup saving format: "
@@ -104,15 +104,15 @@ msgstr "Formato para copia de seguridad: "
 
 msgctxt "#32020"
 msgid "Retrieving Music Database"
-msgstr "Recuperando base de datos para música"
+msgstr "Recuperando Base de Datos para música"
 
 msgctxt "#32021"
 msgid "Creating Addon Database"
-msgstr "Creando base de datos para addon"
+msgstr "Creando Base de Datos para Add-on"
 
 msgctxt "#32022"
 msgid "Choose Available cdART"
-msgstr "Seleccione un cdART"
+msgstr "Seleccione un cdART disponible"
 
 msgctxt "#32023"
 msgid "Download Successful!"
@@ -136,7 +136,7 @@ msgstr "Ilustraciones no descargadas!"
 
 msgctxt "#32028"
 msgid "Download aborted!"
-msgstr "¡Descarga cancelada!"
+msgstr "Descarga cancelada!"
 
 msgctxt "#32029"
 msgid "No Artwork found?"
@@ -144,7 +144,7 @@ msgstr "¿No se encontraron ilustraciones?"
 
 msgctxt "#32030"
 msgid "Please contribute! Upload your Artwork"
-msgstr "Por favor contribuya! Suba sus ilustraciones(Artwork)"
+msgstr "Por favor contribuya! Suba sus ilustraciones (Artwork)"
 
 msgctxt "#32031"
 msgid "On fanart.tv"
@@ -168,11 +168,11 @@ msgstr " *DESCARGANDO ilustraciones* "
 
 msgctxt "#32036"
 msgid "Music folder path(for Artwork)"
-msgstr "Ruta de la carpeta música(para ilustraciones)"
+msgstr "Ruta de la carpeta música (para ilustraciones)"
 
 msgctxt "#32037"
 msgid "Getting local artists"
-msgstr "Buscando artistas en local"
+msgstr "Buscando artistas locales"
 
 msgctxt "#32038"
 msgid "Artist: "
@@ -197,21 +197,21 @@ msgstr ""
 #. string insert for local artist
 msgctxt "#32043"
 msgid "Local Artists:"
-msgstr "Artistas:"
+msgstr "Artistas locales:"
 
 #. string insert for local cdARTs
 msgctxt "#32044"
 msgid "Local cdARTs:"
-msgstr "cdARTs:"
+msgstr "cdARTs locales:"
 
 #. string insert for local albums
 msgctxt "#32045"
 msgid "Local Discs:"
-msgstr "Álbumes:"
+msgstr "Discos locales:"
 
 msgctxt "#32046"
 msgid "Automatic Downloading Artwork"
-msgstr "Descarga automática de Artwork"
+msgstr "Descarga automática de ilustraciones"
 
 msgctxt "#32047"
 msgid "Downloading..."
@@ -227,11 +227,11 @@ msgstr "Artistas que coinciden: %s"
 
 msgctxt "#32050"
 msgid "Database setup aborted..."
-msgstr "Configuración base de datos abortada..."
+msgstr "Configuración de la Base de Datos cancelada..."
 
 msgctxt "#32051"
 msgid "Addon Database is crucial to script!"
-msgstr "La base de datos del Addon es muy importante para el script!"
+msgstr "La Base de Datos del Add-on es crucial para el script!"
 
 msgctxt "#32052"
 msgid "Please go to the Advanced Menu and"
@@ -239,7 +239,7 @@ msgstr "Por favor vaya a Menú Avanzado y"
 
 msgctxt "#32053"
 msgid "Refresh Addon Database"
-msgstr "actulice la base de datos del Addon"
+msgstr "Actualice la Base de Datos del Add-on"
 
 msgctxt "#32054"
 msgid "/Artist/Album.png"
@@ -255,7 +255,7 @@ msgstr "cdARTs copiados"
 
 msgctxt "#32057"
 msgid "Finished Copying cdARTs"
-msgstr "Finalizado copiado de cdARTs"
+msgstr "Copia de cdARTs finalizada"
 
 msgctxt "#32058"
 msgid "cdARTs Stored in"
@@ -279,11 +279,11 @@ msgstr "Ruta para archivo missing.txt"
 
 msgctxt "#32063"
 msgid "Copy Unique Local cdARTs"
-msgstr ""
+msgstr "Copiar cdARTs locales únicos"
 
 msgctxt "#32064"
 msgid "Unique cdARTS folder: %s"
-msgstr ""
+msgstr "Carpeta cdARTS única: %s"
 
 msgctxt "#32065"
 msgid "Comparing Local and Online cdARTs..."
@@ -307,7 +307,7 @@ msgstr "Restaurando cdARTs desde copia de seguridad..."
 
 msgctxt "#32070"
 msgid "cdARTs Restored from backup folder"
-msgstr "cdARTs restaurados desde carpeta de respaldo"
+msgstr "cdARTs restaurados desde la carpeta de respaldo"
 
 msgctxt "#32071"
 msgid "Settings have not been setup!"
@@ -315,11 +315,11 @@ msgstr "Ajustes no configurados!"
 
 msgctxt "#32072"
 msgid "Please go to Settings menu..."
-msgstr "Por favor vaya a Menú de Configuración..."
+msgstr "Por favor, vaya a Menú de Configuración..."
 
 msgctxt "#32073"
 msgid "Then Advanced: Refresh Addon Database"
-msgstr "Opciones Avanzadas: Actualizar base de datos del addon"
+msgstr "Opciones Avanzadas: Actualizar Base de Datos del Add-on"
 
 msgctxt "#32074"
 msgid "Copy cdART to Backup Folder"
@@ -331,7 +331,7 @@ msgstr "Borrar cdART"
 
 msgctxt "#32076"
 msgid "Copy To Unique Folder For Upload"
-msgstr ""
+msgstr "Copiar a una carpeta única para subir"
 
 msgctxt "#32077"
 msgid "Custom Label Colors"
@@ -363,7 +363,7 @@ msgstr "Blanco"
 
 msgctxt "#32084"
 msgid "Cyan"
-msgstr "Cían"
+msgstr "Cyan"
 
 msgctxt "#32085"
 msgid "Violet"
@@ -379,7 +379,7 @@ msgstr "   Color para Artistas Reconocidos"
 
 msgctxt "#32088"
 msgid "   Unrecognized Artists Color"
-msgstr "   Color para Artistas No Reconocidos"
+msgstr "   Color para Artistas NO Reconocidos"
 
 msgctxt "#32089"
 msgid "   fanart.tv Albums Match Color"
@@ -391,15 +391,15 @@ msgstr "   Color para Álbumes Locales que coinciden"
 
 msgctxt "#32091"
 msgid "   Local and fanart.tv Match Color"
-msgstr "   Color para ilustraciones que coinciden en Local y en fanart.tv"
+msgstr "   Color para ilustraciones que coinciden en Local y con fanart.tv"
 
 msgctxt "#32092"
 msgid "   Unmatched Album Color"
-msgstr "   Color para Álbum que No Coincide"
+msgstr "   Color para Álbum que NO coincide"
 
 msgctxt "#32093"
 msgid "   Local cdART List Color"
-msgstr "   Color para Lista Local de cdART"
+msgstr "   Color para lista Local de cdART"
 
 msgctxt "#32094"
 msgid "Enable custom colors for labels"
@@ -415,7 +415,7 @@ msgstr "Duplicados encontrados"
 
 msgctxt "#32097"
 msgid "    Resize Unique cdARTs?"
-msgstr "    Redimensionar cdARTs?"
+msgstr "    Cambiar tamaño para cdARTs únicos?"
 
 msgctxt "#32098"
 msgid "Local cdART List"
@@ -435,7 +435,7 @@ msgstr "Ordenación para Artistas Álbum"
 
 msgctxt "#32102"
 msgid "Retrieving Local Database"
-msgstr "Recuperando base de datos local"
+msgstr "Recuperando Base de Datos Local"
 
 msgctxt "#32103"
 msgid "Saving Missing Artwork List"
@@ -443,7 +443,7 @@ msgstr "Guardando lista de ilustraciones no encontradas"
 
 msgctxt "#32104"
 msgid "Uploading Missing cdART List to website"
-msgstr "Subiendo lista de cdART no encontrados a la web"
+msgstr "Subiendo lista de cdART que faltan al sitio web"
 
 msgctxt "#32105"
 msgid "Retrieving Album Details"
@@ -451,7 +451,7 @@ msgstr "Recuperando detalles del Álbum"
 
 msgctxt "#32106"
 msgid "Overwrite low-res existing cdARTs"
-msgstr "Sobreescribir cdARTs con baja resolución"
+msgstr "Sobreescribir cdARTs existentes con baja resolución"
 
 msgctxt "#32108"
 msgid "Database too old"
@@ -475,11 +475,11 @@ msgstr "Actualizando Miniaturas y Fanarts"
 
 msgctxt "#32113"
 msgid "Finished updating Thumbnails and Fanarts"
-msgstr "Finalizada actualización de Miniaturas y Fanarts"
+msgstr "Finalizada actualización para Miniaturas y Fanarts"
 
 msgctxt "#32114"
 msgid "Check Database MBID's to be current during an Update"
-msgstr "Comprobar los MBID(MusicBrainz Identifier) de la base de datos durante actualización"
+msgstr "Comprobar MBID(MusicBrainz Identifier) de la base de datos durante actualización"
 
 msgctxt "#32115"
 msgid "Notify while in Background mode"
@@ -499,7 +499,7 @@ msgstr "Creación Base de Datos en progreso...  Saliendo del Script..."
 
 msgctxt "#32119"
 msgid "Stopping Background Database Building"
-msgstr "Deteniendo creación de la Base de Datos"
+msgstr "Deteniendo creación de Base de Datos"
 
 msgctxt "#32120"
 msgid "All Artists"
@@ -523,11 +523,11 @@ msgstr "Recuperando todos los Artistas locales"
 
 msgctxt "#32125"
 msgid "Artist ID: "
-msgstr "ID para Artista: "
+msgstr "ID del Artista: "
 
 msgctxt "#32126"
 msgid "Modify Addon Database"
-msgstr "Modificar Base de Datos"
+msgstr "Modificar Base de Datos del Add-on"
 
 msgctxt "#32127"
 msgid "Edit Album"
@@ -543,32 +543,32 @@ msgstr "Actualizar Base de Datos"
 
 msgctxt "#32130"
 msgid "XBMC Music Database missing..."
-msgstr "No encontrada base de datos para archivos de música..."
+msgstr "No encontrada Base de Datos para archivos de música..."
 
 msgctxt "#32131"
 msgid "Please insure Music Library is built."
-msgstr "Asegúrate de que la biblioteca de música haya sido creada."
+msgstr Por favor, asegúrese que la biblioteca de música haya sido creada."
 
 msgctxt "#32132"
 msgid "Updating Missing MusicBrainz Artist's IDs"
-msgstr "Actualizando MusicBrainzID de Artistas faltantes"
+msgstr "Actualizando ID de Artistas MusicBrainz faltantes"
 
 msgctxt "#32133"
 msgid "Updating Missing MusicBrainz Album/Artist ID's"
-msgstr "Actualizando MusicBrainzID de Álbum/Artista faltantes"
+msgstr "Actualizando ID de Álbum/Artista MusicBrainz faltantes"
 
 msgctxt "#32134"
 msgid "Updating Addon Database"
-msgstr "Actualizando Base de Datos del Addon"
+msgstr "Actualizando Base de Datos del Add-on"
 
 msgctxt "#32135"
 msgid "Updating Addon Database - Local Artists"
-msgstr "Actualizando Base de Datos del Addon - Artistas Locales"
+msgstr "Actualizando Base de Datos del Add-on - Artistas Locales"
 
 msgctxt "#32136"
 msgid ""
 "Enable MusicBrainz ID update during Addon Database update(for missing IDs)"
-msgstr "Habilitar actualización de MusicBrainzID durante actualización de la Base de Datos del Addon(para IDs desconocidos)"
+msgstr "Habilitar actualización de ID MusicBrainz durante actualización de Base de Datos del Add-on (para IDs desconocidos)"
 
 msgctxt "#32137"
 msgid "Artist"
@@ -580,11 +580,11 @@ msgstr "Álbum"
 
 msgctxt "#32139"
 msgid "Successfully backed up Addon Database"
-msgstr "Copia de seguridad de la Base de Datos del addon realizada con éxito"
+msgstr "Copia de seguridad de Base de Datos del Add-on realizada con éxito"
 
 msgctxt "#32140"
 msgid "Old Database version found..."
-msgstr "Versión anterior de la base de datos encontrada..."
+msgstr "Base de Datos anterior encontrada..."
 
 msgctxt "#32141"
 msgid "Would you like to add Local Artists to Addon Database?"
@@ -592,7 +592,7 @@ msgstr "¿Desea añadir los Artistas Locales a la Base de Datos del Addon?"
 
 msgctxt "#32142"
 msgid "Add all artists to Database during Database build or update?"
-msgstr "¿Agregar todos los artistas a la base de datos durante la creación o actualización de la base de datos?"
+msgstr "¿Desea agregar todos los Artistas a la Base de Datos durante la creación o actualización de la Base de Datos?"
 
 msgctxt "#32143"
 msgid "Extra Settings"
@@ -624,15 +624,15 @@ msgstr "Comprobando MusicBrainzID para Artistas"
 
 msgctxt "#32150"
 msgid "Checking Album MBIDs"
-msgstr "Comprobando MusicBrainzID de Álbumes"
+msgstr "Comprobando MusicBrainzID para Álbumes"
 
 msgctxt "#32151"
 msgid "Find Missing MBIDs"
-msgstr "Localizar MusicBrainzID desconocidos"
+msgstr "Localizar MusicBrainzID faltantes"
 
 msgctxt "#32152"
 msgid "Refresh MBIDs"
-msgstr "Refrescar MusicBrainzID"
+msgstr "Actualizar MusicBrainzID"
 
 msgctxt "#32153"
 msgid "Change MBID"
@@ -648,11 +648,11 @@ msgstr "Introduzca MusicBrainzID"
 
 msgctxt "#32156"
 msgid "Select from search(manual entry)"
-msgstr "Seleccionar de la búsqueda (entrada manual)"
+msgstr "Seleccionar desde búsqueda (entrada manual)"
 
 msgctxt "#32157"
 msgid "Select from search(automatic)"
-msgstr "Seleccionar de la búsqueda (entrada automática)"
+msgstr "Seleccionar desde búsqueda (entrada automática)"
 
 msgctxt "#32158"
 msgid "Enable saving of missing.txt file"
@@ -676,7 +676,7 @@ msgstr "¿Es correcto este MusicBrainzID?"
 
 msgctxt "#32163"
 msgid "Are you sure you want to delete MBID?"
-msgstr "¿Estas seguro que deseas eliminar este MusicBrainzID?"
+msgstr "¿Está seguro que desea eliminar este MusicBrainzID?"
 
 msgctxt "#32164"
 msgid "Enter Artist name to search"
@@ -696,7 +696,7 @@ msgstr "Introducir MusicBrainzID del Álbum - Incluyendo guiones (36 carácteres
 
 msgctxt "#32168"
 msgid "Artist Banners"
-msgstr "Banners de artista"
+msgstr "Banners de Artista"
 
 msgctxt "#32169"
 msgid "400px X 155px"
@@ -708,25 +708,25 @@ msgstr ""
 
 msgctxt "#32171"
 msgid "Enable HD Music LOGOs"
-msgstr "Habilitar logos para música HD (HDClearLogo)"
+msgstr "Habilitar logos HD para música (HDClearLogo)"
 
 msgctxt "#32172"
 msgid "Backup addon database during update"
-msgstr "Copia de seguridad de base de datos durante la actualización del complemento"
+msgstr "Realizar copia de seguridad de la Base de Datos durante actualización"
 
 msgctxt "#32173"
 msgid ""
 "Number of days to cache fanart.tv data(The Scheduler)[CR]Cache gets cleared "
 "with manual use of cdART Manager"
-msgstr "Número de días para almacenar cache de fanart.tv(The Scheduler) [CR]La memoria caché se borra con el uso manual de cdART Manager"
+msgstr "Número de días para almacenar en cache datos de fanart.tv (The Scheduler)[CR]La memoria caché se borra con el uso de cdART Manager"
 
 msgctxt "#32174"
 msgid "Number of possible MBID matches:"
-msgstr "Número de posibles MusicBrainzID que coinciden"
+msgstr "Número de posibles coincidencias para MusicBrainzID"
 
 msgctxt "#32175"
 msgid "Enable replacement of illegal filename characters in artist names"
-msgstr "Habilitar reemplazo de nombres de archivos no validos en nombres de artistas"
+msgstr "Habilitar reemplazo de caracteres no validos para nombre de archivo Artistas"
 
 msgctxt "#32176"
 msgid "   illegal characters to replace"
@@ -746,15 +746,15 @@ msgstr ""
 
 msgctxt "#32180"
 msgid "    change trailing periods to replacement character"
-msgstr ""
+msgstr "    "
 
 msgctxt "#32181"
 msgid "There is an error in Settings."
-msgstr "Hay un error en la configuración"
+msgstr "Hay un error en Ajustes."
 
 msgctxt "#32182"
 msgid "Please check your settings and save settings[CR](press OK in settings)"
-msgstr "Por favor, verifique su configuración y guarde la[CR](presione OK en la configuración)
+msgstr "Por favor, verifique los Ajustes y guardelo[CR](presione OK en los Ajustes)
 
 msgctxt "#32183"
 msgid "Limit number Extrafanarts"
@@ -782,12 +782,12 @@ msgstr "Utilizar http://musicbrainz.org como servidor MusicBrainz"
 
 msgctxt "#32189"
 msgid "     Url path to MusicBrainz Server(example - http://192.168.1.20)"
-msgstr "     Url para Servidor MusicBrainz(ejemplo - http://192.168.1.20)"
+msgstr "     Ruta URL para Servidor MusicBrainz (ejemplo - http://192.168.1.20)"
 
 msgctxt "#32190"
 msgid "     Delay between MusicBrainz Server requests(100's of Milliseconds)"
-msgstr "     Retraso entre solicitudes a Servidor MusicBrainz(centésimas de milisegundos)"
+msgstr "     Retraso entre solicitudes a Servidor MusicBrainz (0.1 Segundos)"
 
 msgctxt "#32191"
 msgid "Refresh fanart.tv data"
-msgstr "Refrescar datos de fanart.tv"
+msgstr "Actualizar datos de fanart.tv"
